[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/Wood and Paper UI/Prefabs/6.png" type="Texture" id=1]
[ext_resource path="res://Level/TombolPopUp.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/Wood and Paper UI/Sliders/2.png" type="Texture" id=3]
[ext_resource path="res://assets/Wood and Paper UI/Prefabs/1.png" type="Texture" id=4]
[ext_resource path="res://assets/senjata adat no bg/keris__jateng_-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://assets/senjata adat no bg/mandau__kalbar_-removebg-preview.png" type="Texture" id=6]
[ext_resource path="res://assets/senjata adat no bg/sundu__ntt_-removebg-preview.png" type="Texture" id=7]
[ext_resource path="res://assets/senjata adat no bg/keris__jogja_-removebg-preview.png" type="Texture" id=8]
[ext_resource path="res://assets/senjata adat no bg/mandau__kalut_-removebg-preview.png" type="Texture" id=9]
[ext_resource path="res://assets/senjata adat no bg/kujang__jabar_banten_-removebg-preview.png" type="Texture" id=10]
[ext_resource path="res://assets/senjata adat no bg/mandau_kalteng.png" type="Texture" id=11]
[ext_resource path="res://assets/senjata adat no bg/clurit__jatim_-removebg-preview.png" type="Texture" id=12]
[ext_resource path="res://assets/senjata adat no bg/keris__bali_-removebg-preview.png" type="Texture" id=13]
[ext_resource path="res://assets/senjata adat no bg/keris__ntb_-removebg-preview.png" type="Texture" id=14]
[ext_resource path="res://assets/Wood and Paper UI/Sliders/1.png" type="Texture" id=15]
[ext_resource path="res://Level/Senjata2.gd" type="Script" id=16]
[ext_resource path="res://Level/VBoxSenjata2.gd" type="Script" id=17]
[ext_resource path="res://Level/png-transparent-padlock-drawing-coloring-book-padlock-rectangle-technic-brand-removebg-preview.png" type="Texture" id=18]
[ext_resource path="res://assets/Folks-Normal.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://assets/Pirate Treasure/Gold Coin/Screenshot_2024-05-29_143156-rem.png" type="Texture" id=20]
[ext_resource path="res://assets/Wood and Paper UI/Small Banner/13.png" type="Texture" id=21]
[ext_resource path="res://assets/Wood and Paper UI/Small Banner/1.png" type="Texture" id=22]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 10, 11, 108, 106 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 19 )

[node name="Senjata2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 16 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxSenjata2" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 12.0
margin_right = 26.0
script = ExtResource( 17 )

[node name="HBoxContainerAchievement" type="HBoxContainer" parent="Panel/VBoxSenjata2"]
margin_right = 366.0
margin_bottom = 70.0

[node name="Button" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement"]
margin_right = 70.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 4 )

[node name="KujangJabarBanten-removebg-preview2" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement/Button"]
position = Vector2( 34, 32 )
scale = Vector2( 0.164958, 0.129249 )
texture = ExtResource( 10 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement/Button"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement/Button"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 20 )
align = 0

[node name="Button2" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 4 )

[node name="KerisJateng-removebg-preview" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement/Button2"]
position = Vector2( 36, 32 )
scale = Vector2( 0.0730769, 0.0851548 )
texture = ExtResource( 5 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement/Button2"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement/Button2"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 20 )
align = 0

[node name="Button3" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement"]
margin_left = 148.0
margin_right = 218.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 4 )

[node name="KerisJogja-removebg-preview" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement/Button3"]
position = Vector2( 38, 33 )
scale = Vector2( 0.0820433, 0.112694 )
texture = ExtResource( 8 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement/Button3"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement/Button3"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 20 )
align = 0

[node name="Button4" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement"]
margin_left = 222.0
margin_right = 292.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 4 )

[node name="CluritJatim-removebg-preview" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement/Button4"]
position = Vector2( 37, 36 )
scale = Vector2( 0.2525, 0.278169 )
texture = ExtResource( 12 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement/Button4"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement/Button4"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 20 )
align = 0

[node name="HBoxContainerAchievement2" type="HBoxContainer" parent="Panel/VBoxSenjata2"]
margin_top = 74.0
margin_right = 366.0
margin_bottom = 144.0

[node name="Button5" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement2"]
margin_right = 70.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 4 )

[node name="KerisBali-removebg-preview" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement2/Button5"]
position = Vector2( 34, 32 )
scale = Vector2( 0.0920901, 0.0769065 )
texture = ExtResource( 13 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement2/Button5"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement2/Button5"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 20 )
align = 0

[node name="Button6" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement2"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 4 )

[node name="KerisNtb-removebg-preview" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement2/Button6"]
position = Vector2( 34, 37 )
scale = Vector2( 0.0747549, 0.102328 )
texture = ExtResource( 14 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement2/Button6"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement2/Button6"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 20 )
align = 0

[node name="Button7" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement2"]
margin_left = 148.0
margin_right = 218.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 4 )

[node name="SunduNtt-removebg-preview" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement2/Button7"]
position = Vector2( 35, 36 )
scale = Vector2( 0.0735294, 0.0857843 )
texture = ExtResource( 7 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement2/Button7"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement2/Button7"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 20 )
align = 0

[node name="Button8" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement2"]
margin_left = 222.0
margin_right = 292.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 4 )

[node name="MandauKalut-removebg-preview" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement2/Button8"]
position = Vector2( 35, 34 )
scale = Vector2( 0.137043, 0.163174 )
texture = ExtResource( 9 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement2/Button8"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement2/Button8"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 20 )
align = 0

[node name="HBoxContainerAchievement3" type="HBoxContainer" parent="Panel/VBoxSenjata2"]
margin_top = 148.0
margin_right = 366.0
margin_bottom = 218.0

[node name="Button9" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement3"]
margin_right = 70.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 4 )

[node name="MandauKalbar-removebg-preview" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement3/Button9"]
position = Vector2( 35, 34 )
scale = Vector2( 0.086, 0.077 )
texture = ExtResource( 6 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement3/Button9"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement3/Button9"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 20 )
align = 0

[node name="Button10" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement3"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 4 )

[node name="MandauKalteng" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement3/Button10"]
position = Vector2( 35.1563, 33.9063 )
scale = Vector2( 0.105272, 0.0689323 )
texture = ExtResource( 11 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement3/Button10"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement3/Button10"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 20 )
align = 0

[node name="Button11" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement3"]
margin_left = 148.0
margin_right = 218.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 4 )

[node name="MandauKaltim" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement3/Button11"]
position = Vector2( 36, 34 )
scale = Vector2( 0.105272, 0.0689323 )
texture = ExtResource( 11 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement3/Button11"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement3/Button11"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 20 )
align = 0

[node name="Button12" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement3"]
margin_left = 222.0
margin_right = 292.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 4 )

[node name="MandauKalsel" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement3/Button12"]
position = Vector2( 36, 34 )
scale = Vector2( 0.105272, 0.0689323 )
texture = ExtResource( 11 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata2/HBoxContainerAchievement3/Button12"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata2/HBoxContainerAchievement3/Button12"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 20 )
align = 0

[node name="Button" type="Button" parent="."]
margin_left = 301.0
margin_top = 181.0
margin_right = 325.0
margin_bottom = 201.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 15 )

[node name="Button2" type="Button" parent="."]
margin_left = 301.0
margin_top = 207.0
margin_right = 325.0
margin_bottom = 227.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 3 )

[node name="CoinBar" type="Control" parent="."]
margin_left = 284.0
margin_top = -4.0
margin_right = 349.0
margin_bottom = 25.0
__meta__ = {
"_edit_group_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="CoinBar"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="CoinBar/HBoxContainer"]
margin_right = 32.0
margin_bottom = 40.0
texture = ExtResource( 22 )

[node name="TextureRect2" type="TextureRect" parent="CoinBar/HBoxContainer"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 40.0
texture = ExtResource( 21 )

[node name="TextureRect" type="TextureRect" parent="CoinBar"]
margin_left = 19.0
margin_top = 7.0
margin_right = 35.0
margin_bottom = 23.0
texture = ExtResource( 20 )

[node name="Label" type="Label" parent="CoinBar"]
margin_left = 37.0
margin_top = 10.0
margin_right = 64.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[connection signal="pressed" from="Panel/VBoxSenjata2/HBoxContainerAchievement/Button" to="Panel/VBoxSenjata2" method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata2/HBoxContainerAchievement/Button2" to="Panel/VBoxSenjata2" method="_on_Button2_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata2/HBoxContainerAchievement/Button3" to="Panel/VBoxSenjata2" method="_on_Button3_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata2/HBoxContainerAchievement/Button4" to="Panel/VBoxSenjata2" method="_on_Button4_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata2/HBoxContainerAchievement2/Button5" to="Panel/VBoxSenjata2" method="_on_Button5_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata2/HBoxContainerAchievement2/Button6" to="Panel/VBoxSenjata2" method="_on_Button6_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata2/HBoxContainerAchievement2/Button7" to="Panel/VBoxSenjata2" method="_on_Button7_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata2/HBoxContainerAchievement2/Button8" to="Panel/VBoxSenjata2" method="_on_Button8_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata2/HBoxContainerAchievement3/Button9" to="Panel/VBoxSenjata2" method="_on_Button9_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata2/HBoxContainerAchievement3/Button10" to="Panel/VBoxSenjata2" method="_on_Button10_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata2/HBoxContainerAchievement3/Button11" to="Panel/VBoxSenjata2" method="_on_Button11_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata2/HBoxContainerAchievement3/Button12" to="Panel/VBoxSenjata2" method="_on_Button12_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
