extends VBoxContainer



func _on_Button_pressed():
	get_tree().change_scene("res://Senjata/Info/KujangJabarInfo.tscn")


func _on_Button2_pressed():
	get_tree().change_scene("res://Senjata/Info/KerisJatengInfo.tscn")


func _on_Button3_pressed():
	get_tree().change_scene("res://Senjata/Info/KerisJogjaInfo.tscn")


func _on_Button4_pressed():
	get_tree().change_scene("res://Senjata/Info/CluritJatimInfo.tscn")


func _on_Button5_pressed():
	get_tree().change_scene("res://Senjata/Info/KerisBaliInfo.tscn")


func _on_Button6_pressed():
	get_tree().change_scene("res://Senjata/Info/KerisNtbInfo.tscn")


func _on_Button7_pressed():
	get_tree().change_scene("res://Senjata/Info/SunduInfo.tscn")


func _on_Button8_pressed():
	get_tree().change_scene("res://Senjata/Info/MandauKalutInfo.tscn")


func _on_Button9_pressed():
	get_tree().change_scene("res://Senjata/Info/MandauKalbarInfo.tscn")


func _on_Button10_pressed():
	get_tree().change_scene("res://Senjata/Info/MandauKaltengInfo.tscn")


func _on_Button11_pressed():
	get_tree().change_scene("res://Senjata/Info/MandauKaltimInfo.tscn")


func _on_Button12_pressed():
	get_tree().change_scene("res://Senjata/Info/MandauKalselInfo.tscn")
